# docs/swagger.yaml
@@ -7,12 +7,6 @@ definitions:
     required:
     - email
     type: object
-  model.ResponseErrorVerifyCode:
-    properties:
-      message:
-        description: Message provides information about the response.
-        type: string
-    type: object
   model.ResponseRegister:
     description: The response payload returned after a user registers.
     properties:
@@ -20,6 +14,12 @@ definitions:
         description: |-
           Message provides information about the registration outcome.
           @Required This field must be provided in the response.
+        type: string
+    type: object
+  model.ResponseStatusVerifyCode:
+    properties:
+      message:
+        description: Message provides information about the response.
         type: string
     type: object
   model.ResponseSuccessVerifyCode:
@@ -96,26 +96,30 @@ paths:
           description: Verification successful, includes access and refresh tokens
           schema:
             $ref: '#/definitions/model.ResponseSuccessVerifyCode'
+        "208":
+          description: Email is already verified
+          schema:
+            $ref: '#/definitions/model.ResponseStatusVerifyCode'
         "400":
           description: Invalid request body or parameters
           schema:
-            $ref: '#/definitions/model.ResponseErrorVerifyCode'
+            $ref: '#/definitions/model.ResponseStatusVerifyCode'
         "401":
           description: Invalid verification code
           schema:
-            $ref: '#/definitions/model.ResponseErrorVerifyCode'
+            $ref: '#/definitions/model.ResponseStatusVerifyCode'
         "404":
           description: User not found
           schema:
-            $ref: '#/definitions/model.ResponseErrorVerifyCode'
+            $ref: '#/definitions/model.ResponseStatusVerifyCode'
         "429":
           description: Too many attempts, please try again later
           schema:
-            $ref: '#/definitions/model.ResponseErrorVerifyCode'
+            $ref: '#/definitions/model.ResponseStatusVerifyCode'
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/model.ResponseErrorVerifyCode'
+            $ref: '#/definitions/model.ResponseStatusVerifyCode'
       summary: Verify User Code
       tags:
       - verification
