# internal/api/v1/verifycode/model/res_status_verifycode.go
@@ -1,9 +1,9 @@
 package model
 
-// ResponseErrorVerifyCode represents the response payload for verification.
+// ResponseStatusVerifyCode represents the response payload for verification.
 // This struct can be used for both successful and error responses.
 
-type ResponseErrorVerifyCode struct {
+type ResponseStatusVerifyCode struct {
 	// Message provides information about the response.
 	Message string `json:"message"`
 }
